--- a/css-example.html
+++ b/css-example.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
 
     <script src="handlebars.js" type="text/javascript"></script>
@@ -12,16 +14,19 @@
     <script src="less-1.3.3.min.js" type="text/javascript"></script>
 
     <script id="option-template" type="text/x-handlebars-template">
-        <div class="selector-option">
-            <div class="name" data-type="{{type}}">{{desc}}</div>
+        <div class="selector-option" data-selector="{{selector}}">
+            <div class="name">{{{desc}}}</div>
         </div>
     </script>
   </head>
   <body>
-    <div class="options">
+    <div id="options">
     </div>
 
-    <div class="display">
+    <div id="display">
+        <div class="class">
+            <span id="id"/>
+        </div>
     </div>
   </body>
 </html>
