--- a/css-example.html
+++ b/css-example.html
@@ -15,30 +15,60 @@
     <script src="less-1.3.3.min.js" type="text/javascript"></script>
 
     <script id="option-template" type="text/x-handlebars-template">
-        <div class="selector-option" data-selector="{{selector}}">
-            <div class="label">{{{label}}}</div>
-            <div class="selector"><i>ex:</i> {{selector}}</div>
+        {{#each selectors}}
+        <div class="group">
+            <div class="name">{{group}}</div>
+            {{#each examples}}
+            <div class="option" data-selector="{{selector}}">
+                <div class="label">{{{formatLabel label}}}</div>
+                <div class="selector"><i>ex:</i> {{selector}}
+                    <div class="spec">{{spec}}</div>
+                </div>
+            </div>
+            {{/each}}
         </div>
+        {{/each}}
     </script>
   </head>
   <body>
     <div id="options">
     </div>
 
+    <!-- Be careful to not use any elements that can't contain other elements, like 
+    <p>, because the way we munge this in jQuery to make it a textual representation
+    of itself while still maintaining this actual hierarchy involves inserting spans
+    into each element. -->
     <div id="display">
-        <article class="list-container">
-            <ul id="list">
+        <header>
+            <div>header</div>
+        </header>
+        <article>
+            <ul>
                 <li class="list-item">
-                    <div>item 1</div>
+                    <div>item 0</div>
+                </li>
+            </ul>
+            <div class="intro">introduction</div>
+            <ul id="main-list" name="list one">
+                <li class="list-item">
+                    <div>item 1.1</div>
                 </li>
                 <li class="list-item">
-                    <div>item 2</div>
+                    <div>item 1.2</div>
                 </li>
                 <li class="list-item">
-                    <div>item 3</div>
+                    <div>item 1.3</div>
+                </li>
+            </ul>
+            <ul name="this is list two">
+                <li class="list-item">
+                    <div>item 2.1</div>
                 </li>
             </ul>
         </article>
+        <footer>
+            <div>footer</div>
+        </div>
     </div>
   </body>
 </html>
