Tweaking styling; tweaking attribute examples to expose subtleties of ~= and |=

--- a/css-example.html
+++ b/css-example.html
@@ -42,8 +42,8 @@
         <header>
             <div>header</div>
         </header>
-        <article>
-            <ul>
+        <article lang="en-us">
+            <ul name="list-intro">
                 <li class="list-item">
                     <div>item 0</div>
                 </li>
@@ -60,8 +60,8 @@
                     <div>item 1.3</div>
                 </li>
             </ul>
-            <ul name="this is list two">
-                <li class="list-item">
+            <ul name="list two">
+                <li class="list item">
                     <div>item 2.1</div>
                 </li>
             </ul>
