--- a/css-example.html
+++ b/css-example.html
@@ -61,7 +61,7 @@
                 </li>
             </ul>
             <ul name="list two">
-                <li class="list item">
+                <li class="list-item">
                     <div>item 2.1</div>
                 </li>
             </ul>
